# EmailNewsletter

./: Cargo.toml  toolchain.txt
.github/workflows/: rust.yml
info/: cargo.txt  toolchain.txt
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
