[package]
name = "email_newsletter"
version = "0.1.0"
authors = ["AliReza Boroujerdian <boroujerdian.alireza@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.38", features = ["clock"] }
config = "0.14.0"
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
reqwest = "0.12.4"


[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
