[package]
name = "email_newsletter"
version = "0.1.0"
authors = ["AliReza Boroujerdian <boroujerdian.alireza@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.115"
config = { version = "0.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
env_logger = "0.11.3"
log = "0.4.21"
tracing = { version = "0.1.40", features = ["log"] }

[dev-dependencies]
reqwest = "0.12.4"
